RESULTS/AutoSpec/raw_results/out-4o-sv-comp/007_0004/007_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/007_0004/007_merged.c:30:5: error: unterminated comment
   30 |     /*@;
      |     ^
